SmoothViewController: add setView

--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -79,7 +79,7 @@
       <Filter>Header Files\Component</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\FPSCounter.h">
-      <Filter>Header Files\Component</Filter>
+      <Filter>Header Files\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
