--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -152,12 +152,12 @@
     <ClInclude Include="EngineCore.h" />
     <ClInclude Include="EventBus.h" />
     <ClInclude Include="FMath.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="GameObject\DummyObject.h" />
-    <ClInclude Include="GameObject\FPSCounter.h" />
-    <ClInclude Include="GameObject\GameObject.h" />
-    <ClInclude Include="GameObject\LoadingScreen.h" />
-    <ClInclude Include="GameObject\Timer.h" />
+    <ClInclude Include="Application.h" />
+    <ClInclude Include="FSEObject\DummyObject.h" />
+    <ClInclude Include="FSEObject\FPSCounter.h" />
+    <ClInclude Include="FSEObject\FSEObject.h" />
+    <ClInclude Include="FSEObject\LoadingScreen.h" />
+    <ClInclude Include="FSEObject\Timer.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="NetworkHandler.h" />
     <ClInclude Include="PhysContactListener.h" />
@@ -173,12 +173,12 @@
     <ClCompile Include="EngineCore.cpp" />
     <ClCompile Include="EventBus.cpp" />
     <ClCompile Include="FMath.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="GameObject\DummyObject.cpp" />
-    <ClCompile Include="GameObject\FPSCounter.cpp" />
-    <ClCompile Include="GameObject\GameObject.cpp" />
-    <ClCompile Include="GameObject\LoadingScreen.cpp" />
-    <ClCompile Include="GameObject\Timer.cpp" />
+    <ClCompile Include="Application.cpp" />
+    <ClCompile Include="FSEObject\DummyObject.cpp" />
+    <ClCompile Include="FSEObject\FPSCounter.cpp" />
+    <ClCompile Include="FSEObject\FSEObject.cpp" />
+    <ClCompile Include="FSEObject\LoadingScreen.cpp" />
+    <ClCompile Include="FSEObject\Timer.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="NetworkHandler.cpp" />
     <ClCompile Include="PhysContactListener.cpp" />
