--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="FSEObject\DummyObject.h" />
     <ClInclude Include="FSEObject\FPSCounter.h" />
+    <ClInclude Include="FSEObject\FSELightWorld.h" />
     <ClInclude Include="FSEObject\FSEObject.h" />
     <ClInclude Include="FSEObject\LoadingScreen.h" />
     <ClInclude Include="FSEObject\Timer.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="FSEObject\DummyObject.cpp" />
     <ClCompile Include="FSEObject\FPSCounter.cpp" />
+    <ClCompile Include="FSEObject\FSELightWorld.cpp" />
     <ClCompile Include="FSEObject\FSEObject.cpp" />
     <ClCompile Include="FSEObject\LoadingScreen.cpp" />
     <ClCompile Include="FSEObject\Timer.cpp" />
