LTBL2: replace with working normals version [d2b5160](https://github.com/Cmdu76/LTBL2/tree/d2b51608efa2aa7e3e2d632746b018d6e2add3be)

--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -146,12 +146,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\LTBL2\LetThereBeLight.hpp" />
     <ClInclude Include="..\LTBL2\src\LightDirectionEmission.hpp" />
     <ClInclude Include="..\LTBL2\src\LightPointEmission.hpp" />
     <ClInclude Include="..\LTBL2\src\LightResources.hpp" />
     <ClInclude Include="..\LTBL2\src\LightShape.hpp" />
     <ClInclude Include="..\LTBL2\src\LightSystem.hpp" />
+    <ClInclude Include="..\LTBL2\src\Sprite.hpp" />
     <ClInclude Include="..\LTBL2\src\Utils.hpp" />
     <ClInclude Include="AssetLoader.h" />
     <ClInclude Include="Component\SmoothViewController.h" />
@@ -175,11 +175,11 @@
     <ClInclude Include="Signals.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\LTBL2\LetThereBeLight.cpp" />
     <ClCompile Include="..\LTBL2\src\LightDirectionEmission.cpp" />
     <ClCompile Include="..\LTBL2\src\LightPointEmission.cpp" />
     <ClCompile Include="..\LTBL2\src\LightShape.cpp" />
     <ClCompile Include="..\LTBL2\src\LightSystem.cpp" />
+    <ClCompile Include="..\LTBL2\src\Sprite.cpp" />
     <ClCompile Include="AssetLoader.cpp" />
     <ClCompile Include="Component\SmoothViewController.cpp" />
     <ClCompile Include="Component\ViewController.cpp" />
