--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -120,11 +120,11 @@
     <ClInclude Include="..\LTBL2\src\LightShape.hpp">
       <Filter>Header Files\LTBL2\src</Filter>
     </ClInclude>
-    <ClInclude Include="FSEObject\FSELightWorld.h">
-      <Filter>Header Files\FSEObject</Filter>
-    </ClInclude>
     <ClInclude Include="..\LTBL2\src\Sprite.hpp">
       <Filter>Header Files\LTBL2\src</Filter>
+    </ClInclude>
+    <ClInclude Include="Lights\FSELightWorld.h">
+      <Filter>Header Files\Lights</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -194,11 +194,11 @@
     <ClCompile Include="..\LTBL2\src\LightSystem.cpp">
       <Filter>Source Files\LTBL2\src</Filter>
     </ClCompile>
-    <ClCompile Include="FSEObject\FSELightWorld.cpp">
-      <Filter>Source Files\FSEObject</Filter>
-    </ClCompile>
     <ClCompile Include="..\LTBL2\src\Sprite.cpp">
       <Filter>Source Files\LTBL2\src</Filter>
+    </ClCompile>
+    <ClCompile Include="Lights\FSELightWorld.cpp">
+      <Filter>Source Files\Lights</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
