--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -162,11 +162,13 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="FSEObject\DummyObject.h" />
     <ClInclude Include="FSEObject\FPSCounter.h" />
+    <ClInclude Include="Lights\BaseLight.h" />
     <ClInclude Include="Lights\FSELightWorld.h" />
     <ClInclude Include="FSEObject\FSEObject.h" />
     <ClInclude Include="FSEObject\LoadingScreen.h" />
     <ClInclude Include="FSEObject\Timer.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Lights\PointLight.h" />
     <ClInclude Include="NetworkHandler.h" />
     <ClInclude Include="PhysContactListener.h" />
     <ClInclude Include="PhysDebugDraw.h" />
@@ -189,11 +191,13 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="FSEObject\DummyObject.cpp" />
     <ClCompile Include="FSEObject\FPSCounter.cpp" />
+    <ClCompile Include="Lights\BaseLight.cpp" />
     <ClCompile Include="Lights\FSELightWorld.cpp" />
     <ClCompile Include="FSEObject\FSEObject.cpp" />
     <ClCompile Include="FSEObject\LoadingScreen.cpp" />
     <ClCompile Include="FSEObject\Timer.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Lights\PointLight.cpp" />
     <ClCompile Include="NetworkHandler.cpp" />
     <ClCompile Include="PhysContactListener.cpp" />
     <ClCompile Include="PhysDebugDraw.cpp" />
