--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="Lights\BaseLight.h">
       <Filter>Header Files\Lights</Filter>
     </ClInclude>
+    <ClInclude Include="Lights\SpotLight.h">
+      <Filter>Header Files\Lights</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
@@ -210,6 +213,9 @@
       <Filter>Source Files\Lights</Filter>
     </ClCompile>
     <ClCompile Include="Lights\BaseLight.cpp">
+      <Filter>Source Files\Lights</Filter>
+    </ClCompile>
+    <ClCompile Include="Lights\SpotLight.cpp">
       <Filter>Source Files\Lights</Filter>
     </ClCompile>
   </ItemGroup>
