SceneDebugger / Editor: Initial impl.

--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="PhysDebugDraw.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneDebugger.h" />
     <ClInclude Include="Signals.h" />
   </ItemGroup>
   <ItemGroup>
@@ -218,6 +219,7 @@
     <ClCompile Include="PhysDebugDraw.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneDebugger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
