--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="Component\Component.h">
       <Filter>Header Files\Component</Filter>
     </ClInclude>
+    <ClInclude Include="FSEObject\KillVolume.h">
+      <Filter>Header Files\FSEObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
@@ -283,6 +286,9 @@
     </ClCompile>
     <ClCompile Include="Component\Component.cpp">
       <Filter>Source Files\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="FSEObject\KillVolume.cpp">
+      <Filter>Source Files\FSEObject</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
