--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -175,6 +175,41 @@
     <ClInclude Include="..\LTBL2\src\LightSystem.hpp" />
     <ClInclude Include="..\LTBL2\src\Sprite.hpp" />
     <ClInclude Include="..\LTBL2\src\Utils.hpp" />
+    <ClInclude Include="..\rapidjson\allocators.h" />
+    <ClInclude Include="..\rapidjson\document.h" />
+    <ClInclude Include="..\rapidjson\encodedstream.h" />
+    <ClInclude Include="..\rapidjson\encodings.h" />
+    <ClInclude Include="..\rapidjson\error\en.h" />
+    <ClInclude Include="..\rapidjson\error\error.h" />
+    <ClInclude Include="..\rapidjson\filereadstream.h" />
+    <ClInclude Include="..\rapidjson\filewritestream.h" />
+    <ClInclude Include="..\rapidjson\fwd.h" />
+    <ClInclude Include="..\rapidjson\internal\biginteger.h" />
+    <ClInclude Include="..\rapidjson\internal\diyfp.h" />
+    <ClInclude Include="..\rapidjson\internal\dtoa.h" />
+    <ClInclude Include="..\rapidjson\internal\ieee754.h" />
+    <ClInclude Include="..\rapidjson\internal\itoa.h" />
+    <ClInclude Include="..\rapidjson\internal\meta.h" />
+    <ClInclude Include="..\rapidjson\internal\pow10.h" />
+    <ClInclude Include="..\rapidjson\internal\regex.h" />
+    <ClInclude Include="..\rapidjson\internal\stack.h" />
+    <ClInclude Include="..\rapidjson\internal\strfunc.h" />
+    <ClInclude Include="..\rapidjson\internal\strtod.h" />
+    <ClInclude Include="..\rapidjson\internal\swap.h" />
+    <ClInclude Include="..\rapidjson\istreamwrapper.h" />
+    <ClInclude Include="..\rapidjson\memorybuffer.h" />
+    <ClInclude Include="..\rapidjson\memorystream.h" />
+    <ClInclude Include="..\rapidjson\msinttypes\inttypes.h" />
+    <ClInclude Include="..\rapidjson\msinttypes\stdint.h" />
+    <ClInclude Include="..\rapidjson\ostreamwrapper.h" />
+    <ClInclude Include="..\rapidjson\pointer.h" />
+    <ClInclude Include="..\rapidjson\prettywriter.h" />
+    <ClInclude Include="..\rapidjson\rapidjson.h" />
+    <ClInclude Include="..\rapidjson\reader.h" />
+    <ClInclude Include="..\rapidjson\schema.h" />
+    <ClInclude Include="..\rapidjson\stream.h" />
+    <ClInclude Include="..\rapidjson\stringbuffer.h" />
+    <ClInclude Include="..\rapidjson\writer.h" />
     <ClInclude Include="AssetLoader.h" />
     <ClInclude Include="Component\Component.h" />
     <ClInclude Include="Component\SmoothViewController.h" />
@@ -201,6 +236,7 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneDebugger.h" />
+    <ClInclude Include="Serialize.h" />
     <ClInclude Include="Signals.h" />
   </ItemGroup>
   <ItemGroup>
@@ -238,6 +274,7 @@
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneDebugger.cpp" />
+    <ClCompile Include="Serialize.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
